--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -23,8 +23,8 @@
           <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect('reset')" [selectOnEnter]="true"
             (enteredPressed)="enterToSelect($event)"></odp-search-box>
         </div>
-        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-light border mr-3" routerLink="bulk-import"
-          ngbTooltip="Bulk Import" id="bulkimport">
+        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-light border mr-3"
+          routerLink="bulk-import" ngbTooltip="Bulk Import" id="bulkimport">
           <span class="dsi dsi-upload"></span>
         </button>
         <button *ngIf="hasPermission('PMUBC')" type="button" id="newUser" class="add-new btn btn-primary"
@@ -88,50 +88,115 @@
                 </li>
               </ul>
             </div>
-            <div style="margin: 0 auto" *ngIf="isDataLoading">
-              <span class="fa fa-spinner fa-pulse fa-3x"></span>
-            </div>
-            <div style="margin-top: 30px; display: grid" *ngIf="!isDataLoading">
+            <div style="margin-top: 30px; display: grid">
               <label class="tab-header">{{ currentTab }}</label>
-              <div *ngIf="currentTab === 'Attributes'" style="display: flex">
+              <div *ngIf="currentTab === 'Attributes'" class="d-flex">
                 <label style="color: #6c7584; font-weight: 400">All attributes in which the user has been added</label>
-                <div class="add-attribute hover d-flex" (click)="showAttributeSide()" id="showAttributeSide">
+                <div class="add-attribute hover d-flex" (click)="showAttributeSide()" id="showAttributeSide"
+                  *ngIf="hasPermission('PMUBU')">
                   <i class="dsi dsi-plus-circle font-20 icon-primary mr-2"></i>
                   <label class="fw-500 font-normal heading">Add Attribute</label>
                 </div>
               </div>
-              <div *ngIf="currentTab === 'Groups'" style="display: flex">
+              <div *ngIf="currentTab === 'Groups'" class="d-flex">
                 <label style="color: #6c7584; font-weight: 400">All groups in which the user has been added
                 </label>
-                <div class="add-attribute hover d-flex" (click)="openGroupModal()" id="openModal">
+                <div class="add-attribute hover d-flex" (click)="openGroupModal()" id="openModal"
+                  *ngIf="hasPermission('PMUBU')">
                   <i class="dsi dsi-plus-circle font-20 mr-2 icon-primary"></i>
                   <label class="fw-500 font-normal heading ">Add to Groups</label>
                 </div>
               </div>
-              <div *ngIf="showTable" class="mt-4">
-                <ag-grid-angular *ngIf="currentTab === 'Groups'" style="height: 300px; overflow-x: hidden" #agGrid
-                  class="ag-theme-balham" [gridOptions]="gridGroupOptions" (gridReady)="onGridReady($event)">
-                </ag-grid-angular>
-                <ag-grid-angular *ngIf="currentTab === 'Attributes'" style="height: 300px; overflow-x: hidden" #agGrid
-                  class="ag-theme-balham" [gridOptions]="gridAttrOptions" (gridReady)="onGridReady($event)">
-                  >
-                </ag-grid-angular>
+              <div *ngIf="!showLazyLoader && userGroups.length > 0 && currentTab==='Groups'" class="mt-4">
+                <div class="scroll-pane">
+                  <div class="list-group mb-3">
+                    <div class="list-group-item header py-0 bg-light text-muted text-uppercase font-11">
+                      <div class="d-flex align-items-center justify-content-between h-100">
+                        <div class="group-name">Name</div>
+                        <div class="group-author-flag">Author</div>
+                        <div class="group-appcenter-flag">Appcenter</div>
+                        <div class="group-actions"></div>
+                      </div>
+                    </div>
+                    <div class="list-group-item" *ngFor="let group of userGroups">
+                      <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex-1">{{group.name}}</div>
+                        <div class="group-author-flag font-12 d-flex align-items-center d-flex-1">
+                          <ng-container *ngIf="group.hasAuthorRoles">
+                            <span class="dis dis-circle text-success mr-2"></span>
+                            <span class="text-dark">Active</span>
+                          </ng-container>
+                          <ng-container *ngIf="!group.hasAuthorRoles">
+                            <span class="dis dis-circle text-muted mr-2"></span>
+                            <span class="text-muted">Inactive</span>
+                          </ng-container>
+                        </div>
+                        <div class="group-appcenter-flag font-12 d-flex align-items-center d-flex-1">
+                          <ng-container *ngIf="group.hasAppcenterRoles">
+                            <span class="dis dis-circle text-success mr-2"></span>
+                            <span class="text-dark">Active</span>
+                          </ng-container>
+                          <ng-container *ngIf="!group.hasAppcenterRoles">
+                            <span class="dis dis-circle text-muted mr-2"></span>
+                            <span class="text-muted">Inactive</span>
+                          </ng-container>
+                        </div>
+                        <div class="group-actions">
+                          <button type="button" class="btn btn-link text-muted p-1" (click)="deleteGroup(group)">
+                            <span class="dsi dsi-trash"></span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="no-attribute" *ngIf="!showTable && currentTab === 'Attributes'">
-                <label class="no-attr-label">No attributes are configured</label>
+              <div *ngIf="!showLazyLoader && details['attributesData']?.length > 0 && currentTab==='Attributes'"
+                class="mt-4">
+                <div class="scroll-pane">
+                  <div class="list-group mb-3">
+                    <div class="list-group-item header py-0 bg-light text-muted text-uppercase font-11">
+                      <div class="d-flex align-items-center justify-content-between h-100">
+                        <div class="d-flex-1">LABEL</div>
+                        <div class="d-flex-1">TYPE</div>
+                        <div class="d-flex-1">VALUE</div>
+                        <div class="group-actions"></div>
+                      </div>
+                    </div>
+                    <div class="list-group-item" *ngFor="let attr of details['attributesData']">
+                      <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex-1">{{attr.label}}</div>
+                        <div class="d-flex-1">{{attr.type}}</div>
+                        <div class="d-flex-1">{{attr.value}}</div>
+
+                        <div class="group-actions">
+                          <button type="button" class="btn btn-link text-muted p-1" (click)="editAttribute(attr)">
+                            <span class="dsi dsi-edit"></span>
+                          </button>
+                          <button type="button" class="btn btn-link text-muted p-1" (click)="deleteAttribute(attr)">
+                            <span class="dsi dsi-trash"></span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="no-attribute" *ngIf="!showLazyLoader && currentTab==='Attributes' && !isAttrPresent(details)">
+                <label class=" no-attr-label">No attributes are configured</label>
                 <label class="no-attr-sub">
                   The user is not assigned to any attribute</label>
                 <button type="button" style="width: auto; margin: auto" class="btn btn-primary add-button"
-                  id="showAttributeSide" (click)="showAttributeSide()">
+                  id="showAttributeSide" (click)="showAttributeSide()" *ngIf="hasPermission('PMUBU')">
                   Add Attributes
                 </button>
               </div>
-              <div class="no-attribute" *ngIf="!showTable && currentTab === 'Groups'">
+              <div class="no-attribute" *ngIf="currentTab === 'Groups' && userGroups.length === 0">
                 <label class="no-attr-label">Not assigned to any groups</label>
                 <label class="no-attr-sub">
                   The user is not assigned to any groups</label>
                 <button type="button" class="btn btn-primary add-button mx-auto" id="addToGroup"
-                  (click)="openGroupModal()">
+                  (click)="openGroupModal()" *ngIf="hasPermission('PMUBU')">
                   Assign to group
                 </button>
               </div>
@@ -147,7 +212,7 @@
           <div class="d-flex align-items-center align-self-start mb-3">
             <span class="font-weight-bold">Remove user(s) from {{ selectedApp }}</span>
           </div>
-          <span class="fa fa-times text-muted hover ignore-click mb-3" id="removeSelectedModalRef"
+          <span class="dsi dsi-close text-muted hover ignore-click mb-3" id="removeSelectedModalRef"
             (click)="removeSelectedModalRef.close(false)"></span>
         </div>
         <ul class="ml-4">
@@ -172,14 +237,14 @@
     <div [ngClass]="{
         show: showNewUserWindow || showPasswordSide || showAddAttribute
       }" class="new-user-window position-fixed bg-white border-left p-4 d-flex flex-column">
-      <!-- <span class="fa fa-times text-secondary hover close" id="closeicon"
+      <!-- <span class="dsi dsi-close text-secondary hover close" id="closeicon"
         (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span> -->
       <div class="d-flex flex-column h-100" *ngIf="showPasswordSide && !showNewUserWindow">
         <div class="d-flex align-items-center justify-content-between mb-4">
           <div class="d-flex align-items-center">
             <h5 class="fw-600 font-20">Reset Password</h5>
           </div>
-          <span class="fa fa-times text-secondary hover" id="closeicon"
+          <span class="dsi dsi-close text-secondary hover" id="closeicon"
             (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span>
         </div>
         <form class="d-flex flex-column h-100" [formGroup]="resetPasswordForm" odpFocusNext>
@@ -189,9 +254,9 @@
               <sup class="text-danger">*</sup>
             </label>
             <div class="input-wrapper position-relative">
-              <input class="form-control" [type]="showPassword['new'] ? 'text' : 'password'"
-                placeholder="Password" formControlName="password" [ngClass]="{ 'is-invalid': pwdError }"
-                autocomplete="new-password" odpAutoFocus />
+              <input class="form-control" [type]="showPassword['new'] ? 'text' : 'password'" placeholder="Password"
+                formControlName="password" [ngClass]="{ 'is-invalid': pwdError }" autocomplete="new-password"
+                odpAutoFocus />
               <span id="showPass" class="dsi eye-icon position-absolute hover" [ngClass]="{
                   'dsi-view': !showPassword['new'],
                   'dsi-hide': showPassword['new']
@@ -212,9 +277,8 @@
               <sup class="text-danger">*</sup>
             </label>
             <div class="input-wrapper position-relative">
-              <input id="cPassword" class="form-control"
-                [type]="showPassword['confirm'] ? 'text' : 'password'" placeholder="Confirm Password"
-                formControlName="cpassword" [ngClass]="{ 'is-invalid': cPwdError }" />
+              <input id="cPassword" class="form-control" [type]="showPassword['confirm'] ? 'text' : 'password'"
+                placeholder="Confirm Password" formControlName="cpassword" [ngClass]="{ 'is-invalid': cPwdError }" />
               <span class="dsi eye-icon position-absolute hover" [ngClass]="{
                   'dsi-view': !showPassword['confirm'],
                   'dsi-hide': showPassword['confirm']
@@ -229,8 +293,7 @@
             </div>
           </div>
           <div class="d-flex align-items-center justify-content-between mt-auto">
-            <button type="button" class="btn btn-primary add-button" id="resetpassowrd"
-              (click)="resetPassword()">
+            <button type="button" class="btn btn-primary add-button" id="resetpassowrd" (click)="resetPassword()">
               Confirm
             </button>
           </div>
@@ -289,9 +352,8 @@
                   <sup class="text-danger">*</sup>
                 </label>
                 <div class="w-100 position-relative" formGroupName="basicDetails">
-                  <input id="name" class="form-control pr-4" type="text" placeholder="Enter Name"
-                    formControlName="name" [ngClass]="{ 'is-invalid': invalidName }"
-                    autocomplete="autocomplete_off_hack" />
+                  <input id="name" class="form-control pr-4" type="text" placeholder="Enter Name" formControlName="name"
+                    [ngClass]="{ 'is-invalid': invalidName }" autocomplete="autocomplete_off_hack" />
                   <span class="dsi dsi-danger-circle text-danger error-icon position-absolute" *ngIf="invalidName"
                     ngbTooltip="This is a required field"></span>
                   <span *ngIf="
@@ -339,9 +401,8 @@
                     <sup class="text-danger">*</sup>
                   </label>
                   <div class="position-relative">
-                    <input id="cPassword" class="form-control"
-                      [type]="showPassword['confirm'] ? 'text' : 'password'" placeholder="Confirm Password"
-                      formControlName="cpassword" [ngClass]="{
+                    <input id="cPassword" class="form-control" [type]="showPassword['confirm'] ? 'text' : 'password'"
+                      placeholder="Confirm Password" formControlName="cpassword" [ngClass]="{
                         'is-invalid': invalidCPassword || invalidPasswordMatch
                       }" />
                     <span class="dsi eye-icon position-absolute hover" [ngClass]="{
@@ -406,13 +467,12 @@
             [disabled]="userForm.get('userData').invalid">
             Add
           </button>
-          <button *ngIf="userInLocal && hasPermission('PMUBC')" type="button"
-            class="btn btn-primary add-button w-100" id="importUser" (click)="importUser()">
+          <button *ngIf="userInLocal && hasPermission('PMUBC')" type="button" class="btn btn-primary add-button w-100"
+            id="importUser" (click)="importUser()">
             Import
           </button>
-          <button *ngIf="userInAzureAD && hasPermission('PMUBC')" type="button"
-            class="btn btn-primary add-button w-100" disableImportid="importUser" (click)="importUserFromAzure()"
-            [disabled]="disableImport">
+          <button *ngIf="userInAzureAD && hasPermission('PMUBC')" type="button" class="btn btn-primary add-button w-100"
+            disableImportid="importUser" (click)="importUserFromAzure()" [disabled]="disableImport">
             Import
           </button>
         </div>
@@ -425,7 +485,7 @@
               {{ editMode ? 'Edit Attribute' : 'Add Attribute' }}
             </h5>
           </div>
-          <span class="fa fa-times text-secondary hover" id="closeicon"
+          <span class="dsi dsi-close text-secondary hover" id="closeicon"
             (click)="showNewUserWindow ? closeWindow(true) : closeWindow()"></span>
         </div>
         <form class="d-flex flex-column" [formGroup]="attributesForm" odpFocusNext>
@@ -435,8 +495,8 @@
               <sup class="text-danger">*</sup>
             </label>
             <div class="position-relative">
-              <input id="label" class="form-control pr-4" type="text" placeholder="Label name"
-                formControlName="label" autocomplete="autocomplete_off_hack" odpAutoFocus />
+              <input id="label" class="form-control pr-4" type="text" placeholder="Label name" formControlName="label"
+                autocomplete="autocomplete_off_hack" odpAutoFocus />
               <span class="dsi dsi-danger-circle text-danger error-icon position-absolute" *ngIf="
                   attributesForm.get('type').touched &&
                   attributesForm.get('label')?.hasError('required')
@@ -467,26 +527,24 @@
               <sup class="text-danger">*</sup>
             </label>
             <div class="position-relative">
-              <input id="value" class="form-control pr-4" type="text" placeholder="Value"
-                formControlName="value" autocomplete="autocomplete_off_hack"
-                *ngIf="attributesForm.get('type').value === 'String'" />
-              <input id="value" class="form-control pr-4" type="number" placeholder="Value"
-                formControlName="value" autocomplete="autocomplete_off_hack"
-                *ngIf="attributesForm.get('type').value === 'Number'" />
+              <input id="value" class="form-control pr-4" type="text" placeholder="Value" formControlName="value"
+                autocomplete="autocomplete_off_hack" *ngIf="attributesForm.get('type').value === 'String'" />
+              <input id="value" class="form-control pr-4" type="number" placeholder="Value" formControlName="value"
+                autocomplete="autocomplete_off_hack" *ngIf="attributesForm.get('type').value === 'Number'" />
               <odp-switch [edit]="{ status: true }" [checked]="attributesForm.get('value').value"
                 (checkedChange)="setUserAttributeValue($event)" *ngIf="attributesForm.get('type').value === 'Boolean'">
               </odp-switch>
 
-              <input id="value" class="form-control pr-4" type="date" placeholder="Value"
-                formControlName="value" autocomplete="autocomplete_off_hack"
-                *ngIf="attributesForm.get('type').value === 'Date'" />
+              <input id="value" class="form-control pr-4" type="date" placeholder="Value" formControlName="value"
+                autocomplete="autocomplete_off_hack" *ngIf="attributesForm.get('type').value === 'Date'" />
               <span class="dsi dsi-danger-circle text-danger error-icon position-absolute" *ngIf="
                   attributesForm.get('value').dirty &&
                   attributesForm.get('value')?.hasError('required')
                 " ngbTooltip="This is a required field"></span>
             </div>
           </div>
-          <button type="button" class="btn btn-primary add-button mt-auto w-100" id="addAttributes" (click)="addAttribute()">
+          <button type="button" class="btn btn-primary add-button mt-auto w-100" id="addAttributes"
+            (click)="addAttribute()">
             {{ editMode ? 'Save' : 'Add' }}
           </button>
         </form>
