--- a/src/app/home/control-panel/user/user.component.scss
+++ b/src/app/home/control-panel/user/user.component.scss
@@ -345,6 +345,7 @@
   text-decoration: underline;
   text-underline-offset: 10px;
   text-decoration-color: $orange;
+  color: $headings;
 }
 
 .tab-header {
@@ -421,29 +422,25 @@
 
 }
 
-::ng-deep .ag-theme-balham .ag-header {
-  font-size: 11px;
-  color: $lightgrey;
 
-  .ag-header-container {
-    background-color: FBFBFB;
+.list-group-item {
+  &.header {
+    font-weight: 400;
+    height: 40px;
   }
+}
 
-
+.d-flex-1 {
+  flex: 1
 }
 
 
-::ng-deep .ag-theme-balham .ag-ltr .ag-has-focus .ag-cell-focus:not(.ag-cell-range-selected),
-.ag-theme-balham .ag-ltr .ag-context-menu-open .ag-cell-focus:not(.ag-cell-range-selected),
-.ag-theme-balham .ag-ltr .ag-has-focus .ag-full-width-row.ag-row-focus .ag-cell-wrapper.ag-row-group,
-.ag-theme-balham .ag-ltr .ag-cell-range-single-cell,
-.ag-theme-balham .ag-ltr .ag-cell-range-single-cell.ag-cell-range-handle,
-.ag-theme-balham .ag-rtl .ag-has-focus .ag-cell-focus:not(.ag-cell-range-selected),
-.ag-theme-balham .ag-rtl .ag-context-menu-open .ag-cell-focus:not(.ag-cell-range-selected),
-.ag-theme-balham .ag-rtl .ag-has-focus .ag-full-width-row.ag-row-focus .ag-cell-wrapper.ag-row-group,
-.ag-theme-balham .ag-rtl .ag-cell-range-single-cell,
-.ag-theme-balham .ag-rtl .ag-cell-range-single-cell.ag-cell-range-handle {
-  border: none;
-  border-color: none;
-  outline: none;
+.group-actions {
+  min-width: 100px;
+
+  .btn {
+    &:hover {
+      color: $secondary  !important;
+    }
+  }
 }
